add some fuetures

--- a/Registration.html
+++ b/Registration.html
@@ -6,6 +6,7 @@
     <title>Register - Buddynest</title>
     <!-- เพิ่มไอคอนจาก Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
     <style>
         /* สไตล์หลักของหน้า */
         body {
