--- a/Forgot-your-password.html
+++ b/Forgot-your-password.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password - Buddynest</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
     <style>
         body {
             margin: 0;
@@ -23,7 +25,8 @@
             height: 100%;
         }
 
-        .left-panel, .right-panel {
+        .left-panel,
+        .right-panel {
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -139,6 +142,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <!-- Left Panel -->
@@ -169,10 +173,11 @@
             window.location.href = "sign-in.html";
         }
 
-        document.querySelector('#forgot-password-form').addEventListener('submit', function(event) {
+        document.querySelector('#forgot-password-form').addEventListener('submit', function (event) {
             event.preventDefault();
             alert('Password reset link has been sent to your email!');
         });
     </script>
 </body>
+
 </html>
