--- a/Pet Care.html
+++ b/Pet Care.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
     <title>Pet Services - BuddyNest</title>
     <link rel="stylesheet" href="styles.css">
 </head>
