--- a/sign-in.html
+++ b/sign-in.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In - Buddynest</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
     <style>
         * {
             margin: 0;
