add some fuetures

--- a/GrabPet.html
+++ b/GrabPet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
-    <title>GrabPet - Buddy Nest</title>
+    <title>GrabPet</title>
     <style>
         body {
             margin: 0;
@@ -196,7 +196,7 @@
                 <img src="img/โลโก้-1.png" alt="BuddyNest Logo" class="logo">
             </div>
             <div class="auth-buttons">
-                <a href="Homepage.html">หน้าหลัก</a>
+                <a href="index.html">หน้าหลัก</a>
                 <a href="Mybooking-1.html">การจองของฉัน</a>
                 <a href="sign-in.html"><button>Sign-in</button></a>
                 <a href="Registration.html"><button>Register</button></a>
@@ -256,7 +256,7 @@
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="Homepage.html">หน้าหลัก</a></p>
+            <p><a href="index.html">หน้าหลัก</a></p>
             <p><a href="GrabPet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
             <p><a href="Pet Care.html">บริการกรูมมิ่ง</a></p>
             <p><a href="Mybooking-1.html">การจองของฉัน</a></p>
