--- a/Mybooking-2.html
+++ b/Mybooking-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
-    <title>การจองของฉัน - Buddy Nest</title>
+    <title>การจองของฉัน</title>
     <style>
         * {
             margin: 0;
@@ -159,7 +159,7 @@
         </div>
         <div></div> <!-- ช่องว่างสำหรับจัดให้อยู่ขวา -->
         <div class="auth-buttons">
-            <a href="Homepage.html">หน้าหลัก</a>
+            <a href="index.html">หน้าหลัก</a>
             <a href="Mybooking-1.html">การจองของฉัน</a>
             <a href="sign-in.html"><button>Sign-in</button></a>
             <a href="Registration.html"><button>Register</button></a>
@@ -206,7 +206,7 @@
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="Homepage.html">หน้าหลัก</a></p>
+            <p><a href="index.html">หน้าหลัก</a></p>
             <p><a href="GrabPet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
             <p><a href="Pet Care.html">บริการกรูมมิ่ง</a></p>
             <p><a href="Mybooking-1.html">การจองของฉัน</a></p>
