--- a/PET DAYCARE.html
+++ b/PET DAYCARE.html
@@ -124,7 +124,7 @@
                     <img src="img/โลโก้-1.png" alt="BuddyNest Logo" class="logo">
                 </div>
                 <div class="auth-buttons">
-                    <a href="Homepage.html">หน้าหลัก</a>
+                    <a href="index.html">หน้าหลัก</a>
                     <a href="Mybooking-1.html">การจองของฉัน</a>
                     <a href="sign-in.html"><button>Sign-in</button></a>
                     <a href="Registration.html"><button>Register</button></a>
@@ -181,7 +181,7 @@
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="Homepage.html">หน้าหลัก</a></p>
+            <p><a href="index.html">หน้าหลัก</a></p>
             <p><a href="GrabPet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
             <p><a href="Pet Care.html">บริการกรูมมิ่ง</a></p>
             <p><a href="Mybooking-1.html">การจองของฉัน</a></p>
