--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
-    <title>Home page BuddyNest - Pet Grooming & Care</title>
+    <title>Home page</title>
     <style>
         * {
             margin: 0;
@@ -173,7 +173,7 @@
         </div>
       <div></div>
       <div class="auth-buttons">
-        <a href="Homepage.html">หน้าหลัก</a>
+        <a href="index.html">หน้าหลัก</a>
         <a href="Mybooking-1.html">การจองของฉัน</a>
         <a href="sign-in.html"><button>Sign-in</button></a>
         <a href="Registration.html"><button>Register</button></a>
@@ -330,7 +330,7 @@
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="Homepage.html">หน้าหลัก</a></p>
+            <p><a href="index.html">หน้าหลัก</a></p>
             <p><a href="GrabPet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
             <p><a href="Pet Care.html">บริการกรูมมิ่ง</a></p>
             <p><a href="Mybooking-1.html">การจองของฉัน</a></p>
