--- a/sign-in.html
+++ b/sign-in.html
@@ -13,6 +13,16 @@
             box-sizing: border-box;
             font-family: Arial, sans-serif;
         }
+        .top-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #f8d7a2;
+            padding: 10px;
+        }
+        .logo {
+            width: 50px;
+        }
 
         body {
             display: flex;
@@ -123,10 +133,79 @@
             margin-bottom: 10px;
             text-align: center;
         }
+        footer.main-footer {
+            display: flex;
+            justify-content: space-around;
+            align-items: flex-start;
+            background-color: #FFF7F7;
+            padding: 40px 20px;
+            flex-wrap: wrap;
+        }
+        footer.main-footer div {
+            margin: 10px;
+            text-align: left;
+        }
+        footer.main-footer h3 {
+            margin-bottom: 10px;
+            font-size: 1.2rem;
+        }
+        footer.main-footer p {
+            margin: 5px 0;
+            font-size: 0.9rem;
+        }
+        footer.main-footer a {
+            text-decoration: none;
+            color: #5a5a5a;
+            font-size: 0.9rem;
+        }
+        footer.main-footer .social-media img {
+            width: 30px;
+            height: 30px;
+            margin: 0 5px;
+        }
+
+        footer#bottom-footer {
+          background-color: #FFD38A;
+          text-align: center;
+          padding: 10px 0;
+          font-size: 0.9rem;
+        }
+
+        @media screen and (max-width: 768px) {
+            footer.main-footer {
+              flex-direction: column;
+              align-items: center;
+              text-align: center;
+            }
+            footer.main-footer div {
+              margin-bottom: 20px;
+            }
+            footer.main-footer .social-media img {
+              margin: 5px;
+            }
+        }
+        a {
+            text-decoration: none;
+        }
     </style>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
+    <header>
+        
+        <div class="top-bar">
+            <div class="logo-container">
+                <img src="img/โลโก้-1.png" alt="BuddyNest Logo" class="logo">
+            </div>
+            <div class="auth-buttons">
+                <a href="index.html">หน้าหลัก</a>
+                <a href="Mybooking-1.html">การจองของฉัน</a>
+                <a href="sign-in.html"><button>Sign-in</button></a>
+                <a href="Registration.html"><button>Register</button></a>
+            </div>
+        </div>
+        
+    </header>
     <div class="signin-container">
         <div class="left-section">
             <div class="logo">
@@ -156,6 +235,44 @@
             </form>
         </div>
     </div>
+    <footer class="main-footer">
+        <div class="team">
+            <h3>Team</h3>
+            <p>Hataichanok Tanaskul</p>
+            <p>Amaraporn Onkoksung</p>
+            <p>Achiraya Kewangnya</p>
+            <p>Aman Alikae</p>
+        </div>
+        <div class="contact">
+            <h3>Contact Us</h3>
+            <p>Email: buddy.nest@up.ac.th</p>
+            <p>Phone Number: (+66)12-3456789</p>
+            <p>Address: 19 ตำบลเมือง อำเภอเมืองพะเยา พะเยา 56000</p>
+        </div>
+        <div class="social-media">
+            <h3>Follow Us</h3>
+            <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
+                <img src="img/fb.png" alt="Facebook Logo">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+                <img src="img/ig.png" alt="Instagram Logo">
+            </a>
+            <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
+                <img src="img/x.png" alt="Twitter Logo">
+            </a>
+        </div>
+        <div class="about">
+            <h3>About Us</h3>
+            <p><a href="index.html">หน้าหลัก</a></p>
+            <p><a href="GrabPet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="Pet Care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="Mybooking-1.html">การจองของฉัน</a></p>
+        </div>
+    </footer>
+
+    <footer id="bottom-footer">
+        <p>© 2025 Buddy Nest. All Rights Reserved.</p>
+    </footer>
 
     <script>
         function togglePassword() {
