--- a/Forgot-your-password.html
+++ b/Forgot-your-password.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+    <title>Buddy Nest - Forgot Password</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
     <style>
         body {
             margin: 0;
