--- a/GrabPet.html
+++ b/GrabPet.html
@@ -3,59 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
-    <title>GrabPet</title>
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <title>Buddy Nest - GrabPet</title>
     <style>
-        body {
+        * {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #fff;
-            color: #333;
+            padding: 0;
+            box-sizing: border-box;
         }
 
-        .top-bar {
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #EA73D3;
+            color: #210000;
+        }
+        .logo {
+            width: 100px;
+        }
+
+        header {
+            background-color: #FFE0AD;
+            padding: 1rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #f8d7a2;
-            padding: 10px;
-        }
-        .logo {
-            width: 50px;
         }
 
-        header nav {
+        header .nav {
             display: flex;
-            gap: 20px;
+            gap: 1.5rem;
         }
 
-        header nav a {
+        header .nav a {
             text-decoration: none;
-            color: #333;
-            font-size: 16px;
+            color: black;
+            font-weight: bold;
         }
 
         header .auth-buttons {
             display: flex;
-            gap: 10px;
+            align-items: center;
+            gap: 1.5rem;
+        }
+
+        header .auth-buttons a {
+            text-decoration: none;
+            color: black;
+            font-weight: bold;
         }
 
         header .auth-buttons button {
-            padding: 10px 15px;
-            border: none;
+            background-color: #e2f5f5;
+            border: 1px solid #ccc;
             border-radius: 20px;
+            padding: 0.5rem 1rem;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 0.9rem;
         }
-
-        header .auth-buttons .sign-in {
-            background-color: #89E7D7;
-        }
-
-        header .auth-buttons .register {
-            background-color: #FEC5BB;
-        }
-
         main {
             text-align: center;
             margin-top: 3rem;
@@ -191,16 +195,14 @@
 </head>
 <body>
     <header>
-        <div class="top-bar">
-            <div class="logo-container">
-                <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
-            </div>
-            <div class="auth-buttons">
-                <a href="index.html">หน้าหลัก</a>
-                <a href="Mybooking-1.html">การจองของฉัน</a>
-                <a href="sign-in.html"><button>Sign-in</button></a>
-                <a href="Registration.html"><button>Register</button></a>
-            </div>
+        <div class="logo-container">
+            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+        </div>
+        <div class="auth-buttons">
+            <a href="index.html">หน้าหลัก</a>
+            <a href="Mybooking-1.html">การจองของฉัน</a>
+            <a href="sign-in.html"><button>Sign-in</button></a>
+            <a href="Registration.html"><button>Register</button></a>
         </div>
     </header>
     <main>
