--- a/Mybooking-1.html
+++ b/Mybooking-1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
-    <title>การจองของฉัน</title>
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <title>Buddy Nest - การจองของฉัน</title>
     <style>
         * {
             margin: 0;
@@ -14,15 +14,15 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #fff;
-            color: #333;
+            background-color: #EA73D3;
+            color: #210000;
         }
-        .logo {
-            width: 50px;
+            .logo {
+            width: 100px;
         }
-        
+
         header {
-            background-color: #d88fd8;
+            background-color: #FFE0AD;
             padding: 1rem;
             display: flex;
             justify-content: space-between;
@@ -60,7 +60,6 @@
             cursor: pointer;
             font-size: 0.9rem;
         }
-
         main {
             text-align: center;
             margin-top: 3rem;
