--- a/Pet Care.html
+++ b/Pet Care.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
-    <title>Pet Services - BuddyNest</title>
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <title>Buddy Nest - Pet Services</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="top-bar">
-            <div class="logo-container">
-                <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
-            </div>
-            <div class="auth-buttons">
-                <a href="index.html">หน้าหลัก</a>
-                <a href="Mybooking-1.html">การจองของฉัน</a>
-                <a href="sign-in.html"><button>Sign-in</button></a>
-                <a href="Registration.html"><button>Register</button></a>
-            </div>
+        <div class="logo-container">
+            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </div>
+        <div class="auth-buttons">
+            <a href="index.html">หน้าหลัก</a>
+            <a href="Mybooking-1.html">การจองของฉัน</a>
+            <a href="sign-in.html"><button>Sign-in</button></a>
+            <a href="Registration.html"><button>Register</button></a>
+        </div>
+    </header>
+    <header>
         <div class="banner">
             <img src="img/แบนเนอร์.png" alt="BuddyNest Banner" class="banner-image">
         </div>
@@ -135,22 +135,59 @@
     </footer>
 
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            text-align: center;
-            background-color: #fdf6e3;
+            box-sizing: border-box;
         }
-        .top-bar {
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #EA73D3;
+            color: #210000;
+        }
+        .logo {
+            width: 100px;
+        }
+
+        header {
+            background-color: #FFE0AD;
+            padding: 1rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #f8d7a2;
-            padding: 10px;
         }
-        .logo {
-            width: 50px;
+
+        header .nav {
+            display: flex;
+            gap: 1.5rem;
+        }
+
+        header .nav a {
+            text-decoration: none;
+            color: black;
+            font-weight: bold;
+        }
+
+        header .auth-buttons {
+            display: flex;
+            align-items: center;
+            gap: 1.5rem;
+        }
+
+        header .auth-buttons a {
+            text-decoration: none;
+            color: black;
+            font-weight: bold;
+        }
+
+        header .auth-buttons button {
+            background-color: #e2f5f5;
+            border: 1px solid #ccc;
+            border-radius: 20px;
+            padding: 0.5rem 1rem;
+            cursor: pointer;
+            font-size: 0.9rem;
         }
         .banner {
             width: 100%;
@@ -167,9 +204,9 @@
             display: flex;
             gap: 20px;
             margin: 20px;
-            overflow-x: auto;  /* เพิ่มการเลื่อนในแนวนอน */
-            white-space: nowrap;  /* ป้องกันไม่ให้ร้านเลื่อนลงมาในบรรทัดใหม่ */
-            padding-bottom: 20px;  /* เพิ่มช่องว่างด้านล่างเพื่อให้การเลื่อนเห็นชัด */
+            overflow-x: auto;
+            white-space: nowrap;
+            padding-bottom: 20px;
         }
         .service-card {
             background: #ffffff;
@@ -177,11 +214,23 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 300px;
-            flex-shrink: 0;  /* ป้องกันไม่ให้การ์ดร้านหดตัว */
+            flex-shrink: 0;
+            display: flex;
+            flex-direction: column;
+            height: 450px; /* กำหนดความสูงเท่ากัน */
         }
         .service-card img {
             max-width: 100%;
             border-radius: 10px;
+            height: 200px; /* กำหนดความสูงของรูปภาพให้เท่ากัน */
+            object-fit: cover; /* ปรับรูปภาพให้พอดีกับขนาด */
+        }
+        .service-info {
+            flex: 1; /* ทำให้เนื้อหาใน .service-info เติมเต็มพื้นที่ที่เหลือ */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            text-align: center; /* จัดให้เนื้อหาอยู่กึ่งกลาง */
         }
         .read-more {
             background-color: #ff6f61;
@@ -190,6 +239,7 @@
             padding: 10px 15px;
             border-radius: 5px;
             cursor: pointer;
+            margin-top: 10px; /* เพิ่มระยะห่างด้านบน */
         }
         .read-more:hover {
             background-color: #e65c50;
@@ -231,14 +281,8 @@
           padding: 10px 0;
           font-size: 0.9rem;
         }
-            /* ลบเส้นใต้จากลิงก์ทั้งหมด */
         a {
             text-decoration: none;
-        }
-
-        /* ตัวอย่างการกำหนดสไตล์ให้กับลิงก์ใน Footer */
-        footer.main-footer a {
-            color: #5a5a5a;
         }
 
         @media screen and (max-width: 768px) {
