--- a/Registration.html
+++ b/Registration.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Buddynest</title>
+    <title>Buddy Nest - Register </title>
     <!-- เพิ่มไอคอนจาก Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
     <style>
         /* สไตล์หลักของหน้า */
         body {
