--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type">
-    <title>Home page</title>
+    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <title>Buddy Nest - Home page</title>
     <style>
         * {
             margin: 0;
@@ -18,11 +18,11 @@
             color: #210000;
         }
         .logo {
-            width: 50px;
+            width: 100px;
         }
 
         header {
-            background-color: #EA73D3;
+            background-color: #FFE0AD;
             padding: 1rem;
             display: flex;
             justify-content: space-between;
@@ -62,12 +62,12 @@
         }
 
         header img {
-            width: 100%;
+            width: 2500%;
             height: auto;
             display: block;
-            margin: 0;
+            margin: auto;
             padding: 0;
-            border: none;
+            border: auto;
         }
 
         .search-section {
