--- a/pages/my_booking/mybooking-0.html
+++ b/pages/my_booking/mybooking-0.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!-- Logo -->
     <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+
+    <!-- Title -->
     <title>Buddy Nest - การจองของฉัน</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/globals.css">
+    <link rel="stylesheet" href="assets/css/navbar.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+
     <style>
         * {
             margin: 0;
