--- a/pages/registration.html
+++ b/pages/registration.html
@@ -317,7 +317,7 @@
             event.preventDefault();  // ป้องกันการส่งฟอร์มแบบปกติ
 
             // หลังจากลงทะเบียนเสร็จให้เปลี่ยนไปหน้าโฮม
-            window.location.href = 'Homepage.html';  // เปลี่ยนเป็น URL ของหน้าโฮมที่คุณต้องการ
+            window.location.href = 'index.html';  // เปลี่ยนเป็น URL ของหน้าโฮมที่คุณต้องการ
         });
     </script>
 </body>
