--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -155,7 +155,7 @@
                         <i id="eye-icon" class="fas fa-eye"></i>
                     </button>
                 </div>
-                <a href="Forgot-your-password.html" class="forgot-password">Forget your password</a>
+                <a href="/pages/forgot_your_password.html" class="forgot-password">Forget your password</a>
                 <button type="button" class="sign-in-button" onclick="handleSignIn()">Sign In</button>
             </form>
         </div>
