--- a/pages/forgot_your_password.html
+++ b/pages/forgot_your_password.html
@@ -173,7 +173,7 @@
     
     <script>
         function goBack() {
-            window.location.href = "sign-in.html";
+            window.location.href = "pages/sign-in.html";
         }
 
         document.querySelector('#forgot-password-form').addEventListener('submit', function (event) {
