Update the href link

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         </section>
         <section class="auth-buttons">
             <a href="index.html">หน้าหลัก</a>
-            <a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="/pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="/pages/registration.html"><button>Register</button></a>
+            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="pages/registration.html"><button>Register</button></a>
         </section>
     </nav>
 
@@ -119,11 +119,11 @@
             <section class="search-category">
                 <h4>ฉันกำลังมองหา 🔍</h4>
                 <div class="service-buttons">
-                    <a href="/pages/pet_care.html"><button>ฝากเลี้ยง</button></a>
-                    <a href="/pages/pet_care.html"><button>ดูแลตามบ้าน</button></a>
-                    <a href="/pages/pet_care.html"><button>ดูแลรายวัน</button></a>
-                    <a href="/pages/pet_care.html"><button>บริการกรูมมิ่ง</button></a>
-                    <a href="/pages/grab_pet.html"><button>บริการรับ-ส่งสัตว์เลี้ยง</button></a>
+                    <a href="pages/pet_care.html"><button>ฝากเลี้ยง</button></a>
+                    <a href="pages/pet_care.html"><button>ดูแลตามบ้าน</button></a>
+                    <a href="pages/pet_care.html"><button>ดูแลรายวัน</button></a>
+                    <a href="pages/pet_care.html"><button>บริการกรูมมิ่ง</button></a>
+                    <a href="pages/grab_pet.html"><button>บริการรับ-ส่งสัตว์เลี้ยง</button></a>
                 </div>
             </section>
 
@@ -288,9 +288,9 @@
             <section class="about">
                 <h3>About Us</h3>
                 <p><a href="index.html">หน้าหลัก</a></p>
-                <p><a href="/pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-                <p><a href="/pages/pet_care.html">บริการกรูมมิ่ง</a></p>
-                <p><a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+                <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+                <p><a href="pages/pet_care.html">บริการกรูมมิ่ง</a></p>
+                <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
             </section>
         </article>
     </footer>
