--- a/pages/my_booking/mybooking-1.html
+++ b/pages/my_booking/mybooking-1.html
@@ -169,9 +169,9 @@
     </header>
 
     <nav>
-        <div class="tab active"><a href="Mybooking-1.html">กำลังจะมาถึง</a></div>
-        <div class="tab"><a href="Mybooking-2.html">เสร็จสมบูรณ์</a></div>
-        <div class="tab"><a href="Mybooking-3.html">ยกเลิก</a></div>
+        <div class="tab active"><a href="pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
+        <div class="tab"><a href="pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
+        <div class="tab"><a href="pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
     </nav>
 
     <main>
@@ -209,9 +209,9 @@
         <div class="about">
             <h3>About Us</h3>
             <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="/pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="/pages/pet_care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="pages/pet_care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
 
