--- a/pages/my_booking/mybooking-2.html
+++ b/pages/my_booking/mybooking-2.html
@@ -156,16 +156,16 @@
         <div></div> <!-- ช่องว่างสำหรับจัดให้อยู่ขวา -->
         <div class="auth-buttons">
             <a href="index.html">หน้าหลัก</a>
-            <a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="/pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="/pages/registration.html"><button>Register</button></a>
+            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="pages/registration.html"><button>Register</button></a>
         </div>
     </header>
 
     <nav>
-        <div class="tab"><a href="/pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
-        <div class="tab active"><a href="/pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
-        <div class="tab"><a href="/pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
+        <div class="tab"><a href="pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
+        <div class="tab active"><a href="pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
+        <div class="tab"><a href="pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
     </nav>
 
     <main>
@@ -203,9 +203,9 @@
         <div class="about">
             <h3>About Us</h3>
             <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="/pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="/pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
 
