--- a/pages/payment/payment-1.html
+++ b/pages/payment/payment-1.html
@@ -218,9 +218,9 @@
         </div>
         <div class="auth-buttons">
             <a href="index.html">หน้าหลัก</a>
-            <a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="/pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="/pages/registration.html"><button>Register</button></a>
+            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="pages/registration.html"><button>Register</button></a>
         </div>
     </header>
     </div>
@@ -305,9 +305,9 @@
         <div class="about">
             <h3>About Us</h3>
             <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="/pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="/pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
 
