--- a/pages/pet_care/petory.html
+++ b/pages/pet_care/petory.html
@@ -162,9 +162,9 @@
         </div>
         <div class="auth-buttons">
             <a href="index.html">หน้าหลัก</a>
-            <a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="/pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="/pages/registration.html"><button>Register</button></a>
+            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="pages/registration.html"><button>Register</button></a>
         </div>
     </header>
     <header>
@@ -187,7 +187,7 @@
             หยอดไรหู 20.- | หยอดเห็บหมัด 50.- (พร้อมการ์ด) | ตัดขนอุ้งเท้า 20.-<br> 
         </p>
         <br>
-        <a href="/pages/payment/payment-3.html"><button class="button">จอง</button></a>
+        <a href="pages/payment/payment-3.html"><button class="button">จอง</button></a>
     </div>   
         
         
@@ -220,9 +220,9 @@
         <div class="about">
             <h3>About Us</h3>
             <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="/pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="/pages/pet_care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="/pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="pages/pet_care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
 
