--- a/pages/my_booking/mybooking-0.html
+++ b/pages/my_booking/mybooking-0.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- Logo -->
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <!-- Logo -->
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
 
     <!-- Title -->
     <title>Buddy Nest - การจองของฉัน</title>
@@ -29,7 +30,8 @@
             background-color: #EA73D3;
             color: #210000;
         }
-            .logo {
+
+        .logo {
             width: 100px;
         }
 
@@ -72,12 +74,13 @@
             cursor: pointer;
             font-size: 0.9rem;
         }
-        
+
         main {
             text-align: center;
             margin: 2rem auto;
             max-width: 600px;
         }
+
         nav {
             display: flex;
             justify-content: center;
@@ -155,23 +158,28 @@
             padding: 40px 20px;
             flex-wrap: wrap;
         }
+
         footer.main-footer div {
             margin: 10px;
             text-align: left;
         }
+
         footer.main-footer h3 {
             margin-bottom: 10px;
             font-size: 1.2rem;
         }
+
         footer.main-footer p {
             margin: 5px 0;
             font-size: 0.9rem;
         }
+
         footer.main-footer a {
             text-decoration: none;
             color: #5a5a5a;
             font-size: 0.9rem;
         }
+
         footer.main-footer .social-media img {
             width: 30px;
             height: 30px;
@@ -179,44 +187,47 @@
         }
 
         footer#bottom-footer {
-          background-color: #FFD38A;
-          text-align: center;
-          padding: 10px 0;
-          font-size: 0.9rem;
+            background-color: #FFD38A;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 0.9rem;
         }
 
         @media screen and (max-width: 768px) {
             footer.main-footer {
-              flex-direction: column;
-              align-items: center;
-              text-align: center;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
             }
+
             footer.main-footer div {
-              margin-bottom: 20px;
+                margin-bottom: 20px;
             }
+
             footer.main-footer .social-media img {
-              margin: 5px;
+                margin: 5px;
             }
         }
     </style>
 </head>
+
 <body>
     <header>
         <div class="logo-container">
-            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="./img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </div>
         <div class="auth-buttons">
-            <a href="index.html">หน้าหลัก</a>
-            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="pages/registration.html"><button>Register</button></a>
+            <a href="./index.html">หน้าหลัก</a>
+            <a href="./pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="./pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="./pages/registration.html"><button>Register</button></a>
         </div>
     </header>
 
     <nav>
-        <div class="tab active"><a href="/pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
-        <div class="tab"><a href="pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
-        <div class="tab"><a href="pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
+        <div class="tab active"><a href="./pages/my_booking/mybooking-1.html">กำลังจะมาถึง</a></div>
+        <div class="tab"><a href="./pages/my_booking/mybooking-2.html">เสร็จสมบูรณ์</a></div>
+        <div class="tab"><a href="./pages/my_booking/mybooking-3.html">ยกเลิก</a></div>
     </nav>
 
     <main>
@@ -225,7 +236,7 @@
                 <h3>KIMFAM</h3>
             </div>
             <div class="booking-content">
-                <img src="img/ร้าน-1.png" alt="KIMFAM Logo" class="booking-logo">
+                <img src="./img/ร้าน-1.png" alt="KIMFAM Logo" class="booking-logo">
                 <div class="booking-info">
                     <h4>แมว 1 - 4 เดือน</h4>
                     <p>ขนยาว | ตู้อาบน้ำอัตโนมัติ</p><br>
@@ -233,14 +244,17 @@
                 </div>
             </div>
             <div class="booking-summary">
-                <p>ค่าจัดส่ง: <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;฿20.00</span></p>
-                <p><strong>ยอดรวมสินค้า:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;฿129.00</strong></p>
+                <p>ค่าจัดส่ง:
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;฿20.00</span>
+                </p>
+                <p><strong>ยอดรวมสินค้า:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;฿129.00</strong>
+                </p>
             </div>
         </section>
     </main>
 
     <br><br><br><br><br><br><br><br><br><br><br>
-    
+
     <footer class="main-footer">
         <div class="team">
             <h3>Team</h3>
@@ -269,10 +283,10 @@
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="../../index.html">หน้าหลัก</a></p>
+            <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="../../pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
 
@@ -280,4 +294,5 @@
         <p>© 2025 Buddy Nest. All Rights Reserved.</p>
     </footer>
 </body>
+
 </html>
