--- a/pages/credit_card.html
+++ b/pages/credit_card.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
     <title>Buddy Nest - บัตรเครดิต/บัตรเดบิต</title>
     <style>
         * {
@@ -182,13 +182,13 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </div>
         <div class="auth-buttons">
-            <a href="index.html">หน้าหลัก</a>
-            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="pages/registration.html"><button>Register</button></a>
+            <a href="../../index.html">หน้าหลัก</a>
+            <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="../../pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="../../pages/registration.html"><button>Register</button></a>
         </div>
     </header>
     
@@ -198,7 +198,7 @@
             <div class="card-box">
                 <div class="card-header">
                     <span>ข้อมูลบัตรถูกเก็บเป็นความลับ</span>
-                    <img src="img/visa.png" alt="Visa Mastercard">
+                    <img src="../../img/visa.png" alt="Visa Mastercard">
                 </div>
                 <form id="cardForm">
                     <label>หมายเลขบัตร</label>
@@ -238,21 +238,21 @@
         <div class="social-media">
             <h3>Follow Us</h3>
             <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
-                <img src="img/fb.png" alt="Facebook Logo">
+                <img src="../../img/fb.png" alt="Facebook Logo">
             </a>
             <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
-                <img src="img/ig.png" alt="Instagram Logo">
+                <img src="../../img/ig.png" alt="Instagram Logo">
             </a>
             <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
-                <img src="img/x.png" alt="Twitter Logo">
+                <img src="../../img/x.png" alt="Twitter Logo">
             </a>
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="../../index.html">หน้าหลัก</a></p>
+            <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="../../pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
 
@@ -295,7 +295,7 @@
         alert("ข้อมูลถูกต้อง! ส่งข้อมูลสำเร็จ");
     
             // เปลี่ยนเส้นทางไปยังหน้า "การจองของฉัน"
-            window.location.href = "pages/my_booking/mybooking-0.html";
+            window.location.href = "../../pages/my_booking/mybooking-0.html";
         });
     </script>
 </body>
