--- a/pages/forgot_your_password.html
+++ b/pages/forgot_your_password.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buddy Nest - Forgot Password</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
     <style>
         body {
             margin: 0;
@@ -149,7 +149,7 @@
     <div class="container">
         <!-- Left Panel -->
         <div class="left-panel">
-            <img src="img/โลโก้-1.png" alt="Buddynest Logo">
+            <img src="../../img/โลโก้-1.png" alt="Buddynest Logo">
         </div>
         <!-- Right Panel -->
         <div class="right-panel">
@@ -173,7 +173,7 @@
     
     <script>
         function goBack() {
-            window.location.href = "pages/sign-in.html";
+            window.location.href = "../../pages/sign-in.html";
         }
 
         document.querySelector('#forgot-password-form').addEventListener('submit', function (event) {
