--- a/pages/payment/payment-4.html
+++ b/pages/payment/payment-4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
     <title>Buddy Nest - Checkout Page</title>
     <style>
         * {
@@ -214,13 +214,13 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </div>
         <div class="auth-buttons">
-            <a href="index.html">หน้าหลัก</a>
-            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="pages/registration.html"><button>Register</button></a>
+            <a href="../../.index.html">หน้าหลัก</a>
+            <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="../../pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="../../pages/registration.html"><button>Register</button></a>
         </div>
     </header>
     </div>
@@ -228,7 +228,7 @@
         <div class="left">
             <h3>รายละเอียดสินค้า</h3>
             <div class="product" onclick="viewDetails()">
-                <img src="img/ร้าน-4.png" alt="ร้านค้า" class="logo">
+                <img src="../../img/ร้าน-4.png" alt="ร้านค้า" class="logo">
                 <div class="product-info">
                     <strong>Pet Care</strong><br>
                     แมว 1-4 เดือน - ขนยาว<br>
@@ -293,21 +293,21 @@
         <div class="social-media">
             <h3>Follow Us</h3>
             <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
-                <img src="img/fb.png" alt="Facebook Logo">
+                <img src="../../img/fb.png" alt="Facebook Logo">
             </a>
             <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
-                <img src="img/ig.png" alt="Instagram Logo">
+                <img src="../../img/ig.png" alt="Instagram Logo">
             </a>
             <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
-                <img src="img/x.png" alt="Twitter Logo">
+                <img src="../../img/x.png" alt="Twitter Logo">
             </a>
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="../../index.html">หน้าหลัก</a></p>
+            <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="../../pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
 
@@ -345,11 +345,11 @@
             if (!paymentSelected) return;
     
             if (paymentSelected.textContent === "QR PromptPay") {
-                window.location.href = "pages/qr_promptpay.html";  
+                window.location.href = "../../pages/qr_promptpay.html";  
             } else if (paymentSelected.textContent === "บัตรเครดิต/บัตรเดบิต") {
-                window.location.href = "pages/crefit_card.html";  
+                window.location.href = "../../pages/crefit_card.html";  
             }else if (paymentSelected.textContent === "เงินสด") {
-                window.location.href = "pages/my_booking/mybooking-0.html";  
+                window.location.href = "../../pages/my_booking/mybooking-0.html";  
             }
         };
     </script>
