--- a/pages/registration.html
+++ b/pages/registration.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Logo -->
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
 
     <!-- Title -->
     <title>Buddy Nest - Register page</title>
@@ -161,7 +161,7 @@
     <article class="register">
         <!-- Left panel -->
         <section class="left-panel">
-            <img src="img/โลโก้-1.png" alt="Buddynest Logo">
+            <img src="../../img/โลโก้-1.png" alt="Buddynest Logo">
             <h4 class="register-subheading">Register your account</h4>
         </section>
 
@@ -317,7 +317,7 @@
             event.preventDefault();  // ป้องกันการส่งฟอร์มแบบปกติ
 
             // หลังจากลงทะเบียนเสร็จให้เปลี่ยนไปหน้าโฮม
-            window.location.href = 'index.html';  // เปลี่ยนเป็น URL ของหน้าโฮมที่คุณต้องการ
+            window.location.href = '../../index.html';  // เปลี่ยนเป็น URL ของหน้าโฮมที่คุณต้องการ
         });
     </script>
 </body>
