--- a/pages/grab_pet.html
+++ b/pages/grab_pet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
     <title>Buddy Nest - GrabPet</title>
     <style>
         * {
@@ -196,13 +196,13 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </div>
         <div class="auth-buttons">
-            <a href="index.html">หน้าหลัก</a>
-            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="pages/registration.html"><button>Register</button></a>
+            <a href="../../index.html">หน้าหลัก</a>
+            <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="../../pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="../../pages/registration.html"><button>Register</button></a>
         </div>
     </header>
     <main>
@@ -225,7 +225,7 @@
         </div>
 
         <main>
-            <img src="img/รูป1.png" alt="icon">
+            <img src="../../img/รูป1.png" alt="icon">
             <h1>ไม่พบรายการในขณะนี้</h1>
         </main>
     </main>
@@ -247,21 +247,21 @@
         <div class="social-media">
             <h3>Follow Us</h3>
             <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
-                <img src="img/fb.png" alt="Facebook Logo">
+                <img src="../../img/fb.png" alt="Facebook Logo">
             </a>
             <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
-                <img src="img/ig.png" alt="Instagram Logo">
+                <img src="../../img/ig.png" alt="Instagram Logo">
             </a>
             <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
-                <img src="img/x.png" alt="Twitter Logo">
+                <img src="../../img/x.png" alt="Twitter Logo">
             </a>
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="../../index.html">หน้าหลัก</a></p>
+            <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="../../pages/pet_care.html Care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
     <footer id="bottom-footer">
