--- a/pages/qr_promptpay.html
+++ b/pages/qr_promptpay.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
 
     <title>Buddy Nest - QR PromptPay</title>
 
@@ -198,20 +198,20 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
+            <img src="../../img/โลโก้-2.png" alt="BuddyNest Logo" class="logo">
         </div>
         <div class="auth-buttons">
-            <a href="index.html">หน้าหลัก</a>
-            <a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a>
-            <a href="pages/sign-in.html"><button>Sign-in</button></a>
-            <a href="pages/registration.html"><button>Register</button></a>
+            <a href="../../index.html">หน้าหลัก</a>
+            <a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a>
+            <a href="../../pages/sign-in.html"><button>Sign-in</button></a>
+            <a href="../../pages/registration.html"><button>Register</button></a>
         </div>
     </header>
 
     <div class="container">
         <h1>QR PromptPay</h1>
         <div class="qr-container">
-            <img src="img/qr.png" alt="QR PromptPay">
+            <img src="../../img/qr.png" alt="QR PromptPay">
             <p class="amount">฿129</p>
             <p class="name">ชื่อ: Buddy Nest จำกัด</p>
             <div class="buttons">
@@ -240,21 +240,21 @@
         <div class="social-media">
             <h3>Follow Us</h3>
             <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
-                <img src="img/fb.png" alt="Facebook Logo">
+                <img src="../../img/fb.png" alt="Facebook Logo">
             </a>
             <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
-                <img src="img/ig.png" alt="Instagram Logo">
+                <img src="../../img/ig.png" alt="Instagram Logo">
             </a>
             <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
-                <img src="img/x.png" alt="Twitter Logo">
+                <img src="../../img/x.png" alt="Twitter Logo">
             </a>
         </div>
         <div class="about">
             <h3>About Us</h3>
-            <p><a href="index.html">หน้าหลัก</a></p>
-            <p><a href="pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
-            <p><a href="pages/pet_care.html">บริการกรูมมิ่ง</a></p>
-            <p><a href="pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
+            <p><a href="../../index.html">หน้าหลัก</a></p>
+            <p><a href="../../pages/grab_pet.html">บริการรับส่งสัตว์เลี้ยง</a></p>
+            <p><a href="../../pages/pet_care.html">บริการกรูมมิ่ง</a></p>
+            <p><a href="../../pages/my_booking/mybooking-1.html">การจองของฉัน</a></p>
         </div>
     </footer>
 
@@ -270,7 +270,7 @@
 
         function confirmPayment() {
             alert('การชำระเงินสำเร็จ!');
-            window.location.href = "pages/my_booking/mybooking-0.html"; // เปลี่ยนหน้าไปยังหน้าการจอง
+            window.location.href = "../../pages/my_booking/mybooking-0.html"; // เปลี่ยนหน้าไปยังหน้าการจอง
         }
 
         // การจับเวลานับถอยหลัง
@@ -290,7 +290,7 @@
 
             if (countdownValue <= 0) {
                 clearInterval(countdownInterval);
-                window.location.href = "pages/payment/payment.html"; // เปลี่ยนหน้าไปยังหน้าชำระเงิน
+                window.location.href = "../../pages/payment/payment.html"; // เปลี่ยนหน้าไปยังหน้าชำระเงิน
             }
         }, 1000); // อัพเดตทุกๆ 1 วินาที
     </script>
