--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buddy Nest - Sign In</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
     <style>
         * {
             margin: 0;
@@ -134,28 +134,28 @@
     <div class="signin-container">
         <div class="left-section">
             <div class="logo">
-                <img src="img/โลโก้-1.png" alt="BuddyNest Logo">
+                <img src="../../img/โลโก้-1.png" alt="BuddyNest Logo">
             </div>
         </div>
 
         <div class="right-section">
             <div class="sign-in-header">
-                <img src="img/sign-in1.png" alt="Sign In Icon">
+                <img src="../../img/sign-in1.png" alt="Sign In Icon">
             </div>
             <form class="sign-in-form" id="signinForm">
                 <div id="error-message" class="error-message"></div>
                 <div class="input-field">
-                    <img src="img/sign-in.png" alt="Email Icon">
+                    <img src="../../img/sign-in.png" alt="Email Icon">
                     <input type="email" id="email" placeholder="Enter your email address" required>
                 </div>
                 <div class="input-field">
-                    <img src="img/key.png" alt="Password Icon">
+                    <img src="../../img/key.png" alt="Password Icon">
                     <input type="password" id="password" name="Password" placeholder="Enter your password" required>
                     <button type="button" class="toggle-password" onclick="togglePassword()">
                         <i id="eye-icon" class="fas fa-eye"></i>
                     </button>
                 </div>
-                <a href="/pages/forgot_your_password.html" class="forgot-password">Forget your password</a>
+                <a href="../../pages/forgot_your_password.html" class="forgot-password">Forget your password</a>
                 <button type="button" class="sign-in-button" onclick="handleSignIn()">Sign In</button>
             </form>
         </div>
@@ -189,7 +189,7 @@
             } else {
                 errorMessage.textContent = '';
                 // นำทางไปยังหน้าหลัก (เปลี่ยน URL ตามต้องการ)
-                window.location.href = 'index.html';  // ปรับ URL ให้ตรงกับหน้าหลักของคุณ
+                window.location.href = '../../index.html';  // ปรับ URL ให้ตรงกับหน้าหลักของคุณ
             }
         }
     </script>
