--- a/pages/grab_pet.html
+++ b/pages/grab_pet.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Logo -->
     <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+
+    <!-- Title -->
     <title>Buddy Nest - GrabPet</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../../assets/css/globals.css">
+
     <style>
         * {
             margin: 0;
