--- a/pages/credit_card.html
+++ b/pages/credit_card.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+   <!-- Meta -->
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+   <!-- Logo -->
+   <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+    <!-- Title -->
     <title>Buddy Nest - บัตรเครดิต/บัตรเดบิต</title>
+    
+    <!-- CSS -->
+    <link rel="stylesheet" href="../../assets/css/globals.css">
+
     <style>
         * {
             margin: 0;
