--- a/pages/forgot_your_password.html
+++ b/pages/forgot_your_password.html
@@ -2,11 +2,22 @@
 <html lang="en">
 
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buddy Nest - Forgot Password</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    <!-- Logo -->
     <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+
+    <!-- Title -->
+    <title>Buddy Nest - Forgot Password</title>
+    
+    <!-- Embedded CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    
+    <!-- CSS -->
+    <link rel="stylesheet" href="../../assets/css/globals.css">
+
     <style>
         body {
             margin: 0;
