--- a/pages/payment/payment-2.html
+++ b/pages/payment/payment-2.html
@@ -16,105 +16,8 @@
     <link rel="stylesheet" href="../../assets/css/navbar.css">
     <link rel="stylesheet" href="../../assets/css/header.css">
     <link rel="stylesheet" href="../../assets/css/footer.css">
-
-    <style>
-        
-        .container {
-            width: 80%;
-            margin: auto;
-            display: flex;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .left, .right {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        .left {
-            flex: 2;
-        }
-        .right {
-            flex: 1;
-        }
-        .product {
-            background: #ffde9a;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 10px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-        .product:hover {
-            background: #fcbf49;
-        }
-        .logo {
-            width: 70px;
-            height: 70px;
-        }
-        .product-info {
-            font-size: 18px;
-        }
-        .total, .address {
-            background: #ffde9a;
-            padding: 15px;
-            border-radius: 10px;
-            margin-top: 10px;
-            font-size: 18px;
-        }
-        .edit-address {
-            color: red;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .payment-options button, .delivery-options button {
-            width: 100%;
-            padding: 12px;
-            margin: 5px 0;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            background: #ddd;
-            font-size: 16px;
-        }
-        .payment-options button.selected, .delivery-options button.selected {
-            background: #00aaff;
-            color: white;
-        }
-        .note textarea {
-            width: 100%;
-            height: 60px;
-            border-radius: 5px;
-            padding: 8px;
-            font-size: 16px;
-        }
-        .payment-summary {
-            background: #ffde9a;
-            padding: 15px;
-            border-radius: 10px;
-            margin-top: 10px;
-            font-size: 18px;
-        }
-        .pay-btn {
-            background: #4caf50;
-            color: white;
-            font-size: 18px;
-            padding: 12px;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-        .pay-btn:disabled {
-            background: gray;
-            cursor: not-allowed;
-        }
-    </style>
-    </style>
+    <link rel="stylesheet" href="../../assets/css/payment.css">
+    
 </head>
 <body>
     <!-- Navbar -->
