--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -2,11 +2,22 @@
 <html lang="en">
 
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buddy Nest - Sign In</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+    <!-- Logo -->
     <link rel="icon" href="../../img/โลโก้-2.png" type="image/icon type" sizes="16x16">
+
+    <!-- Title -->
+    <title>Buddy Nest - Sign In</title>
+
+    <!-- Embedded CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/globals.css">
+
     <style>
         * {
             margin: 0;
