--- a/pages/forgot_your_password.html
+++ b/pages/forgot_your_password.html
@@ -74,9 +74,10 @@
             background-color: #ffffff;
         }
 
-        .right-panel .icon {
-            font-size: 80px;
-            color: #91c4f2;
+        .right-panel .sign-in-header img {
+            width: 200px;
+            height: auto;
+            margin-bottom: 50px;
         }
 
         .right-panel h2 {
@@ -151,6 +152,20 @@
         .right-panel .buttons button:hover {
             opacity: 0.9;
         }
+        @media screen and (max-width: 768px) {
+            .main-footer {
+                section {
+                    width: 80% !important;
+                }
+            }
+
+            .footer-container {
+                max-width: 100% !important;
+                align-items: center;
+                flex-direction: column !important;
+                gap: 2rem;
+            }
+        }
         
     </style>
 </head>
@@ -164,9 +179,10 @@
         </div>
         <!-- Right Panel -->
         <div class="right-panel">
-            <div class="icon">
-                <i class="fas fa-user-circle"></i>
+            <div class="sign-in-header">
+                <img src="../../img/padlock.png" alt="Sign In Icon">
             </div>
+
             <h2>Forgot Your Password</h2>
             <p>Please enter your email address. We will send you a link to reset your password.</p>
             <form id="forgot-password-form">
