--- a/pages/payment/payment-2.html
+++ b/pages/payment/payment-2.html
@@ -164,11 +164,11 @@
             if (!paymentSelected) return;
     
             if (paymentSelected.textContent === "QR PromptPay") {
-                window.location.href = "../pages/qr_promptpay.html";  
+                window.location.href = "../../pages/qr_promptpay.html";  
             } else if (paymentSelected.textContent === "บัตรเครดิต/บัตรเดบิต") {
-                window.location.href = "../pages/crefit_card.html";  
+                window.location.href = "../../pages/crefit_card.html";  
             }else if (paymentSelected.textContent === "เงินสด") {
-                window.location.href = "../pages/my_booking/mybooking-0.html";  
+                window.location.href = "../../pages/my_booking/mybooking-0.html";  
             }
         };
     </script>
