--- a/pages/payment/payment-5.html
+++ b/pages/payment/payment-5.html
@@ -165,7 +165,7 @@
             if (paymentSelected.textContent === "QR PromptPay") {
                 window.location.href = "../../pages/qr_promptpay.html";  
             } else if (paymentSelected.textContent === "บัตรเครดิต/บัตรเดบิต") {
-                window.location.href = "../../pages/crefit_card.html";  
+                window.location.href = "../../pages/credit_card.html";  
             }else if (paymentSelected.textContent === "เงินสด") {
                 window.location.href = "../../pages/my_booking/mybooking-0.html";  
             }
